# Chip8-Emlulator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: Chip8.hpp  Platform.hpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: CMakeLists.txt  Chip8.cpp  Platform.cpp  main.cpp
src/Shaders/: v_shader.glsl
tests/: testChip8.cpp
